# lichess-watch

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  state.rs  ui.rs
